force-app/main/default/objects/Visit_Log__c/Visit_Log__c.object-meta.xml
<CustomObject>
    <label>Visit Log</label>
    <nameField>
        <displayFormat>Log ID - {0000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>