force-app/main/default/objects/Visit_Log__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendees</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Logs</relationshipLabel>
    <relationshipName>Visit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>