force-app/main/default/objects/Visit_Log__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <label>Purpose of Visit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>